Changelog
---------

Version 2.1.0
~~~~~~~~~~~~~

* Adding config file that will allow for customizable work directory
* Adding support for HEVC conversion
* Updating SVT-AV1 to build 1.0.2565
* Fixing windows scaling display issues
* Fixing scaling to properly keep scaling and will be red when bad
* Fixing scaling for videos with rotation
* Fixing audio builder to select correct tracks

Version 2.0.1
~~~~~~~~~~~~~

* Fixing broken exe, requiring console for time being

Version 2.0.0
~~~~~~~~~~~~~

* Adding AV1 support (both FFMPEG libaom-av1 and SVT-AV1)
* Adding VP9 support
* Adding Visible command list
* Adding Audio transcoding options
* Changing into MIT license
* Changing into plugin module design
* Removing all GPL or restrictive licensed products (including x265)
* Major Layout Redesign

Version 1.1.0
~~~~~~~~~~~~~

* Add AV1 support
* Add GIF support
* Add Settings page
* Add About page
* Large amount of changes, fixes, and bugs introduced

Version 1.0.0
~~~~~~~~~~~~~

* Initial release