@@ -14,7 +14,7 @@ enable_audio = True
 
 audio_formats = [
     "aac",
-    "libfdk-aac",
+    "libfdk_aac",
     "ac3",
     "dts",
     "truehd",
@@ -30,33 +30,33 @@ audio_formats = [
     "alac",
     "dca",
     "pcm_dvd",
-    "pcm_f32be",
-    "pcm_f32le",
-    "pcm_f64be",
-    "pcm_f64le",
-    "pcm_mulaw",
+    # "pcm_f32be",
+    # "pcm_f32le",
+    # "pcm_f64be",
+    # "pcm_f64le",
+    # "pcm_mulaw",
     "pcm_s16be",
-    "pcm_s16be_planar",
-    "pcm_s16le",
-    "pcm_s16le_planar",
-    "pcm_s24be",
-    "pcm_s24daud",
-    "pcm_s24le",
-    "pcm_s24le_planar",
-    "pcm_s32be",
-    "pcm_s32le",
-    "pcm_s32le_planar",
-    "pcm_s64be",
-    "pcm_s64le",
-    "pcm_s8",
-    "pcm_s8_planar",
-    "pcm_u16be",
-    "pcm_u16le",
-    "pcm_u24be",
-    "pcm_u24le",
-    "pcm_u32be",
-    "pcm_u32le",
-    "pcm_u8",
+    # "pcm_s16be_planar",
+    # "pcm_s16le",
+    # "pcm_s16le_planar",
+    # "pcm_s24be",
+    # "pcm_s24daud",
+    # "pcm_s24le",
+    # "pcm_s24le_planar",
+    # "pcm_s32be",
+    # "pcm_s32le",
+    # "pcm_s32le_planar",
+    # "pcm_s64be",
+    # "pcm_s64le",
+    # "pcm_s8",
+    # "pcm_s8_planar",
+    # "pcm_u16be",
+    # "pcm_u16le",
+    # "pcm_u24be",
+    # "pcm_u24le",
+    # "pcm_u32be",
+    # "pcm_u32le",
+    # "pcm_u8",
 ]
 
 from plugins.hevc.command_builder import build
